<resources>
    <string name="app_name">FoodOrder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- OnBoarding -->
    <string name="on_boarding_title_1">Anında Sipariş Ver</string>
    <string name="on_boarding_title_2">İstediğin Gibi Hazırlansın</string>
    <string name="on_boarding_title_3">Dakikalar İçinde Kapında!</string>
    <string name="on_boarding_text_1">İstediğin her yerde istediğin anda yemeğini sipariş edebilirsin.</string>
    <string name="on_boarding_text_2">Siparişlerinde yazacağın notlarınla her şey tam istediğin gibi.</string>
    <string name="on_boarding_text_3">Favori lezzetlerin en kısa sürede sana gelsin.</string>
    <!-- Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_name">Ad</string>
    <string name="hint_surname">Soyad</string>
    <string name="hint_password">Şifre</string>
    <string name="hint_current_password">Mevcut Şifre</string>
    <string name="hint_new_password">Yeni Şifre</string>
    <string name="hint_new_password_repeat">Yeni Şifre Tekrar</string>
    <string name="hint_phone_number">Telefon Numarası</string>
    <string name="hint_register">Hesabınız yok mu?</string>
    <string name="hint_title">Başlık</string>
    <string name="hint_select_city">Şehir Seçin</string>
    <string name="hint_select_district">İlçe Seçin</string>
    <string name="hint_comment">Yorumunuz</string>
    <string name="hint_image_url">Resim Adresi</string>
    <string name="hint_banner_image_url">Banner Resim Adresi</string>
    <string name="hint_restaurant_name">Adı</string>
    <string name="hint_min_order_fee">Min. Sipariş Ücreti</string>
    <string name="hint_avg_delivery_time">Tahmini Teslimat Süresi</string>
    <string name="hint_it_name">Adı</string>
    <string name="hint_ingredients">İçindekiler</string>
    <string name="hint_price">Ücreti</string>
    <!-- Buttons -->
    <string name="btn_login">Giriş Yap</string>
    <string name="btn_register">Kaydol</string>
    <string name="btn_next">Devam</string>
    <string name="btn_skip">Atla</string>
    <string name="btn_finish">Bitir</string>
    <string name="btn_cancel">Vazgeç</string>
    <string name="btn_basket">Sepet</string>
    <string name="checkbox_is_owner">Restoran Sahibiyim</string>
    <string name="btn_add_to_basket">Sepete Ekle</string>
    <string name="btn_yes">Evet</string>
    <string name="btn_no">Hayır</string>
    <string name="btn_save">Kaydet</string>
    <string name="btn_continue">Devam</string>
    <string name="btn_logout">Çıkış Yap</string>
    <string name="btn_confirm_order">Sipariş Ver</string>
    <string name="btn_faq">SSS</string>
    <string name="btn_change_password">Şifre Değiştir</string>
    <string name="btn_order_history">Geçmiş Siparişlerim</string>
    <string name="btn_cash">Nakit</string>
    <string name="btn_change">Değiştir</string>
    <string name="btn_send">Gönder</string>
    <string name="btn_delete_restaurant">Restorani Sil</string>
    <string name="btn_preview">Ön İzle</string>
    <string name="btn_delete_food">Ürünü Sil</string>
    <!-- Labels -->
    <string name="title_welcome">Hoşgeldin!</string>
    <string name="label_popular">Popüler</string>
    <string name="label_order_history">Geçmiş Siparişlerim</string>
    <string name="label_addresses">Adreslerim</string>
    <string name="label_address_warning_profile">Kayıtlı adresiniz bulunamadı.</string>
    <string name="label_address_warning">Kayıtlı adresiniz bulunamadı, sipariş vermek için hemen bir tane ekle!</string>
    <string name="label_order_history_warning">Hiç eski siparişini bulamadık.</string>
    <string name="label_restaurant_warning">Bulunduğun ilde kayıtlı restoran bulamadık!</string>
    <string name="label_min_order">Min. Sipariş</string>
    <string name="label_address">Adres</string>
    <string name="label_avg_delivery">Teslimat</string>
    <string name="label_menu">Menü</string>
    <string name="label_empty_cart_warning">Sepetiniz boş, yüzlerce restoran menüsü arasından istediğin yemeği seçip afiyetle yiyebilirsin.</string>
    <string name="label_menu_warning">Görünüşe göre restoranın menüsü eksik. Lütfen restoranın ayarlamalarını tamamladığınga tekrar gel.</string>
    <string name="label_remove_item_from_cart">Ürünü sepetinizden çıkarmak istediğinize emin misiniz?</string>
    <string name="label_clear_cart_and_add">Sepetinizde farklı bir restorandan ürün mevcut. Sepetinizi boşaltıp bu restoranın ürününü eklemek ister misiniz?</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="title_basket">Sepetim</string>
    <string name="label_total">Toplam</string>
    <string name="label_clear_cart_warning">Sepeti boşaltmak istediğinize emin misiniz?</string>
    <string name="title_confirm_cart">Sepeti Onayla</string>
    <string name="label_delivery_address">Teslimat Adresi</string>
    <string name="label_payment_type">Ödeme Yöntemi</string>
    <string name="label_order_note">Sipariş Notu</string>
    <string name="label_change_password">Şifre Değiştir</string>
    <string name="title_edit_profile">Profili Düzenle</string>
    <string name="title_edit_address">Adresi Düzenle</string>
    <string name="title_add_address">Adres Ekle</string>
    <string name="label_restaurant_count">0 restoran bulundu</string>
    <string name="label_no_order_warning">Görünüşe göre henüz siparişin yok. Onlarca restoran arasından istediğin siparişi hemen ver.</string>
    <string name="title_delete_address_warning">Adresi silmek istediğinize emin misiniz?</string>
    <string name="label_score">Puan *</string>
    <string name="title_restaurants">Restoranlarım</string>
    <string name="label_no_restaurant_warning">Kayıtlı bir restoranınız bulunmamakta. Hemen restoranınızı kaydedip binlerce müşteriye ulaşın.</string>
    <string name="title_add_restaurant">Restoran Ekle</string>
    <string name="title_edit_restaurant">Restoran Düzenle</string>
    <string name="label_no_active_order">Aktif siparişiniz bulunmamaktadır.</string>
    <string name="label_restaurant_no_food_warning">Restoranın menüsünde kayıtlı ürün bulunmuyor. Hemen ürünlerinizi ekleyip binlerce müşteriye ulaştırın.</string>
    <string name="title_add_food">Yemek Ekle</string>
</resources>