<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_16">

    <TextView
        android:id="@+id/textViewTitle"
        android:textColor="@color/black_800"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/label_remove_item_from_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNo"
        android:text="@string/btn_no"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/space_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginHorizontal="@dimen/space_8"
        android:backgroundTint="@color/gray_800"
        app:layout_constraintEnd_toStartOf="@id/buttonYes"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonYes"
        android:text="@string/btn_yes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/space_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_8"
        android:backgroundTint="@color/primary_red"
        android:layout_marginTop="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonNo"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
