<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/space_16"
    android:paddingHorizontal="@dimen/space_32"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/label_change_password"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black_800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutCurrentPassword"
        android:hint="@string/hint_current_password"
        app:boxStrokeColor="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:errorTextAppearance="@style/customTextInputLayoutError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        app:boxCornerRadiusTopStart="@dimen/space_16"
        app:boxCornerRadiusTopEnd="@dimen/space_16"
        app:boxCornerRadiusBottomStart="@dimen/space_16"
        app:boxCornerRadiusBottomEnd="@dimen/space_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextCurrentPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPassword"
        android:hint="@string/hint_new_password"
        app:boxStrokeColor="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:errorTextAppearance="@style/customTextInputLayoutError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        app:boxCornerRadiusTopStart="@dimen/space_16"
        app:boxCornerRadiusTopEnd="@dimen/space_16"
        app:boxCornerRadiusBottomStart="@dimen/space_16"
        app:boxCornerRadiusBottomEnd="@dimen/space_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutCurrentPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPasswordRepeat"
        android:hint="@string/hint_new_password_repeat"
        app:boxStrokeColor="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:errorTextAppearance="@style/customTextInputLayoutError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        app:boxCornerRadiusTopStart="@dimen/space_16"
        app:boxCornerRadiusTopEnd="@dimen/space_16"
        app:boxCornerRadiusBottomStart="@dimen/space_16"
        app:boxCornerRadiusBottomEnd="@dimen/space_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewPasswordRepeat"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/space_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:layout_marginHorizontal="@dimen/space_8"
        android:backgroundTint="@color/gray_800"
        app:layout_constraintEnd_toStartOf="@id/buttonChange"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNewPasswordRepeat" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonChange"
        android:text="@string/btn_change"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/space_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_8"
        app:backgroundTint="@color/primary_red"
        android:layout_marginTop="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNewPasswordRepeat" />

</androidx.constraintlayout.widget.ConstraintLayout>