<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.owner.food.OwnerFoodFragment">

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/title_add_food"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black_800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_64"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutImage"
        android:hint="@string/hint_image_url"
        app:boxStrokeColor="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:errorTextAppearance="@style/customTextInputLayoutError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        android:layout_marginHorizontal="@dimen/space_32"
        app:boxCornerRadiusTopStart="@dimen/space_16"
        app:boxCornerRadiusTopEnd="@dimen/space_16"
        app:boxCornerRadiusBottomStart="@dimen/space_16"
        app:boxCornerRadiusBottomEnd="@dimen/space_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextImage"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        android:hint="@string/hint_it_name"
        app:boxStrokeColor="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:errorTextAppearance="@style/customTextInputLayoutError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:layout_marginHorizontal="@dimen/space_32"
        app:boxCornerRadiusTopStart="@dimen/space_16"
        app:boxCornerRadiusTopEnd="@dimen/space_16"
        app:boxCornerRadiusBottomStart="@dimen/space_16"
        app:boxCornerRadiusBottomEnd="@dimen/space_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPrice"
        android:hint="@string/hint_price"
        app:boxStrokeColor="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:errorTextAppearance="@style/customTextInputLayoutError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:layout_marginHorizontal="@dimen/space_32"
        app:boxCornerRadiusTopStart="@dimen/space_16"
        app:boxCornerRadiusTopEnd="@dimen/space_16"
        app:boxCornerRadiusBottomStart="@dimen/space_16"
        app:boxCornerRadiusBottomEnd="@dimen/space_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPrice"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutIngredients"
        android:hint="@string/hint_ingredients"
        app:boxStrokeColor="@color/gray_600"
        app:hintTextColor="@color/gray_600"
        app:errorTextAppearance="@style/customTextInputLayoutError"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_4"
        android:layout_marginHorizontal="@dimen/space_32"
        app:boxCornerRadiusTopStart="@dimen/space_16"
        app:boxCornerRadiusTopEnd="@dimen/space_16"
        app:boxCornerRadiusBottomStart="@dimen/space_16"
        app:boxCornerRadiusBottomEnd="@dimen/space_16"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextIngredients"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/space_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginStart="@dimen/space_32"
        android:layout_marginEnd="@dimen/space_8"
        android:backgroundTint="@color/gray_800"
        app:layout_constraintEnd_toStartOf="@id/buttonSave"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutIngredients" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:text="@string/btn_save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/space_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_blue"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginEnd="@dimen/space_32"
        android:layout_marginStart="@dimen/space_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutIngredients" />

    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:id="@+id/buttonDelete"
        android:text="@string/btn_delete_food"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/space_32"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_red"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginHorizontal="@dimen/space_32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonSave" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>