<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="@dimen/space_16"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.order_confirm.OrderConfirmFragment">

    <ImageButton
        android:id="@+id/buttonBack"
        android:src="@drawable/ic_arrow_back"
        android:backgroundTint="@android:color/transparent"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="@dimen/space_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTitle"
        android:text="@string/title_confirm_cart"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black_800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewLabelAddresses"
        android:text="@string/label_delivery_address"
        android:textColor="@color/black_800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_64"
        app:layout_constraintTop_toBottomOf="@id/buttonBack"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAddresses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:paddingHorizontal="@dimen/space_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelAddresses"/>

    <TextView
        android:id="@+id/textViewLabelPaymentType"
        android:text="@string/label_payment_type"
        android:textColor="@color/black_800"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:layout_marginTop="@dimen/space_32"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewAddresses"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPaymentTypes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:paddingHorizontal="@dimen/space_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelPaymentType"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewLabelNote"
        android:text="@string/label_order_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        android:layout_marginStart="@dimen/space_16"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewPaymentTypes"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginHorizontal="@dimen/space_16"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelNote"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNote"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:lines="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConfirmOrder"
        android:text="@string/btn_confirm_order"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/space_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginBottom="@dimen/space_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>